# EmbeddedJSC

./: .gitignore  CMakeLists.txt  CMakePresets.json  EMBEDDING.md  LICENSE  PLAN.md  README.md  vcpkg.json
cmake/: ejscConfig.cmake.in
examples/classes/: CMakeLists.txt  main.cpp
examples/hello/: CMakeLists.txt  main.cpp
examples/native_module/: CMakeLists.txt  main.cpp  test.js
examples/timers/: CMakeLists.txt  main.cpp
extra/: CMakeLists.txt
extra/include/ejsc/extra/: timer_manager.h
extra/src/: timer_manager.cpp
include/ejsc/: class.h  context.h  ejsc.h  error.h  fwd.h  module.h  runtime.h  value.h
src/: context.cpp  module.cpp  runtime.cpp  value.cpp
src/internal/: class_bridge.cpp  class_bridge.h  context_state.h  global_object_table.cpp  global_object_table.h  jsc_init.cpp  jsc_init.h  module_loader.cpp  module_loader.h  synthetic_module.cpp  synthetic_module.h
tests/: CMakeLists.txt  test_eval.cpp
vcpkg-ports/javascriptcore/: fix-stackframe-isasyncframe.patch  portfile.cmake  usage  vcpkg.json
